<resources>
    <string name="app_name">simple calculator</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_plus">+</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="button_subtract">-</string>
    <string name="button_7">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_devide">/</string>
    <string name="button_c">C</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_multiply">*</string>
    <string name="button_equals">=</string>
</resources>